# faster

./: .gitignore  README.md  meson.build
faster/: faster.cc  meson.build
faster/core/: gen_property.cc  meson.build  property.hh
faster/core/tests/: meson.build  t-property.cc
